Tests results using allure

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,4 @@
 FROM python:3.10.4-slim
-RUN 'apt install tree'
+RUN sudo apt install tree
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
