--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,4 @@
 FROM python:3.10.4
-RUN apt install tree
+RUN apt update && apt install tree
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
